continue to fill in files 2

--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -1,13 +1,55 @@
-# React App Environment Variables
+# packages/web/.env.example
+
+# Environment
+REACT_APP_ENV=development
+
+# API Configuration
 REACT_APP_API_URL=http://localhost:5000/api/v1
 REACT_APP_WS_URL=ws://localhost:5000
+
+# Production URLs
+# REACT_APP_API_URL=https://api.smartchat.ai/api/v1
+# REACT_APP_WS_URL=wss://api.smartchat.ai
+
+# Public URLs
+REACT_APP_PUBLIC_URL=http://localhost:3000
+
+# Features
+REACT_APP_ENABLE_OAUTH=true
+REACT_APP_ENABLE_GOOGLE_AUTH=true
+REACT_APP_ENABLE_APPLE_AUTH=true
+REACT_APP_ENABLE_2FA=true
+REACT_APP_ENABLE_BRAINSTORM=true
+
+# OAuth
+REACT_APP_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+REACT_APP_APPLE_CLIENT_ID=com.smartchat.ai
+REACT_APP_APPLE_REDIRECT_URI=https://smartchat.ai/auth/apple/callback
 
 # Stripe
 REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_...
 
-# Google OAuth
-REACT_APP_GOOGLE_CLIENT_ID=
-
 # Analytics (optional)
 REACT_APP_GA_TRACKING_ID=
 REACT_APP_MIXPANEL_TOKEN=
+REACT_APP_SENTRY_DSN=
+
+# Feature Flags
+REACT_APP_FEATURE_DARK_MODE=true
+REACT_APP_FEATURE_FILE_UPLOAD=true
+REACT_APP_FEATURE_VOICE_INPUT=false
+REACT_APP_FEATURE_MOBILE_APP_BANNER=true
+
+# AI Models
+REACT_APP_DEFAULT_CLAUDE_MODEL=claude-4-sonnet
+REACT_APP_DEFAULT_GROK_MODEL=grok-3
+
+# Limits
+REACT_APP_MAX_FILE_SIZE=26214400
+REACT_APP_MAX_MESSAGE_LENGTH=10000
+REACT_APP_MAX_ATTACHMENT_COUNT=5
+
+# Support
+REACT_APP_SUPPORT_EMAIL=support@smartchat.ai
+REACT_APP_DOCS_URL=https://docs.smartchat.ai
+REACT_APP_STATUS_URL=https://status.smartchat.ai
