--- a/.env.example
+++ b/.env.example
@@ -1,44 +1,23 @@
 # Environment
 NODE_ENV=production
-
-# API Configuration
-API_PORT=5000
-API_HOST=0.0.0.0
-
-# Frontend URL
-FRONTEND_URL=https://your-domain.com
-
-# Database
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/smartchat
-REDIS_URL=redis://localhost:6379
-
-# Authentication
-JWT_SECRET=your-super-secret-jwt-key
-JWT_REFRESH_SECRET=your-super-secret-refresh-key
-JWT_EXPIRE=15m
-JWT_REFRESH_EXPIRE=7d
-
-# AI Services
-ANTHROPIC_API_KEY=sk-ant-api03-...
-GROK_API_KEY=your-grok-api-key
-
-# Payment Services
-STRIPE_SECRET_KEY=sk_live_...
-STRIPE_WEBHOOK_SECRET=whsec_...
-
-# OAuth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-
-# AWS
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_S3_BUCKET=smartchat-uploads
 AWS_REGION=us-east-1
 
-# Email
-SENDGRID_API_KEY=
-EMAIL_FROM=noreply@smartchat.ai
+# AWS Configuration
+AWS_ACCOUNT_ID=123456789012
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
 
-# Monitoring
-SENTRY_DSN=
+# ECR Repository Names
+IMAGE_REPO_NAME_API=smartchat-api
+IMAGE_REPO_NAME_WEB=smartchat-web
+IMAGE_TAG=latest
+
+# Application URLs
+API_URL=https://api.smartchat.ai
+WEB_URL=https://smartchat.ai
+
+# Database (use MongoDB Atlas for production)
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/smartchat?retryWrites=true&w=majority
+
+# Redis (use ElastiCache for production)
+REDIS_URL=redis://redis-cluster.abc123.cache.amazonaws.com:6379
