--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,13 +21,15 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "connect-redis": "^7.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
+    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
-    "ioredis": "^5.3.2",
+    "redis": "^4.6.12",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
@@ -38,7 +40,11 @@
     "stripe": "^14.10.0",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "google-auth-library": "^9.4.1",
+    "speakeasy": "^2.0.0",
+    "qrcode": "^1.5.3",
+    "jwks-rsa": "^3.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
