--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -34,11 +34,11 @@ APPLE_TEAM_ID=
 APPLE_KEY_ID=
 APPLE_PRIVATE_KEY=
 
-# AWS
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_S3_BUCKET=smartchat-uploads
-AWS_REGION=us-east-1
+# S3 Storage (renamed from AWS_*)
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET=smartchat-uploads
+S3_REGION=us-east-1
 
 # SendGrid
 SENDGRID_API_KEY=
