--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,14 @@
 NODE_ENV=production
 AWS_REGION=us-east-1
 
-# AWS Configuration
+# AWS Configuration (для AWS CLI, не для приложения)
 AWS_ACCOUNT_ID=123456789012
-AWS_ACCESS_KEY_ID=your-access-key
-AWS_SECRET_ACCESS_KEY=your-secret-key
+
+# S3 Configuration (переименованные переменные для приложения)
+S3_ACCESS_KEY_ID=your-access-key
+S3_SECRET_ACCESS_KEY=your-secret-key
+S3_REGION=us-east-1
+S3_BUCKET=smartchat-uploads
 
 # ECR Repository Names
 IMAGE_REPO_NAME_API=smartchat-api
