--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.js",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint src/**/*.js",
     "migrate": "node dist/scripts/migrate.js",
     "seed": "node dist/scripts/seed.js"
   },
@@ -18,6 +18,7 @@
     "@aws-sdk/s3-request-presigner": "^3.478.0",
     "@sendgrid/mail": "^8.1.0",
     "@smartchat/shared": "file:../shared",
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -44,7 +45,8 @@
     "google-auth-library": "^9.4.1",
     "speakeasy": "^2.0.0",
     "qrcode": "^1.5.3",
-    "jwks-rsa": "^3.1.0"
+    "jwks-rsa": "^3.1.0",
+    "rate-limit-redis": "^4.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -58,6 +60,8 @@
     "@types/node": "^20.10.5",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.7",
+    "@types/speakeasy": "^2.0.10",
+    "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
