--- a/amplify.yml
+++ b/amplify.yml
@@ -1,30 +1,31 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        # Install dependencies
-        - npm ci --legacy-peer-deps
-        - npm run bootstrap
-        
-        # Build shared packages first
-        - npm run build --workspace=@neuralchat/shared
-        - npm run build --workspace=@neuralchat/ui-kit
-        
-    build:
-      commands:
-        # Build web application
-        - npm run build --workspace=@neuralchat/web
-        
-  artifacts:
-    baseDirectory: packages/web/build
-    files:
-      - '**/*'
-      
-  cache:
-    paths:
-      - node_modules/**/*
-      - packages/*/node_modules/**/*
-      - .npm/**/*
-      
-appRoot: .
+applications:
+  - frontend:
+      phases:
+        preBuild:
+          commands:
+            # Install dependencies
+            - npm ci --legacy-peer-deps
+            - npm run bootstrap
+            
+            # Build shared packages first
+            - npm run build --workspace=@neuralchat/shared
+            - npm run build --workspace=@neuralchat/ui-kit
+            
+        build:
+          commands:
+            # Build web application
+            - npm run build --workspace=@neuralchat/web
+            
+      artifacts:
+        baseDirectory: packages/web/build
+        files:
+          - '**/*'
+          
+      cache:
+        paths:
+          - node_modules/**/*
+          - packages/*/node_modules/**/*
+          - .npm/**/*
+          
+    appRoot: packages/web
