--- a/packages/ui-kit/package.json
+++ b/packages/ui-kit/package.json
@@ -9,8 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "npx rollup -c",
+    "dev": "npx rollup -c -w",
     "test": "jest",
     "lint": "eslint src/**/*.{ts,tsx}",
     "storybook": "storybook dev -p 6006",
